--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,9 @@
 :root{
   font-family: "Poppins", sans-serif;
   color-scheme: dark;
+
+  .glow-effect {
+    box-shadow: 0 0 10px rgba(201, 126, 166, 0.679), 0 0 10px rgba(0, 255, 255, 0.4);
+  }
+  
 }
